fixed spacing product items

--- a/src/scss/pages/_shop.scss
+++ b/src/scss/pages/_shop.scss
@@ -10,7 +10,7 @@
     }
     .cards-md {
       border-radius: 6px;
-      margin-bottom: 24px;
+      margin-bottom: 18px;
     }
   }
 
